syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.openobserve.cluster";
option java_outer_classname = "metricsProto";

package cluster;

import "cluster/common.proto";

service Metrics {
    rpc Query (MetricsQueryRequest) returns (MetricsQueryResponse) {}
    rpc WalFile (MetricsWalFileRequest) returns (MetricsWalFileResponse) {}
}

message MetricsQueryRequest {
    Job                         job = 1;
    string                   org_id = 2;
    bool                   need_wal = 4;
    MetricsQueryStmt          query = 5;
    int64                   timeout = 8;
}

message MetricsQueryStmt {
    string            query = 1;
    int64             start = 2;
    int64               end = 3;
    int64              step = 4;
}

message MetricsQueryResponse {
    Job                         job = 1;
    int32                      took = 2;
    string              result_type = 3; // vector, matrix, scalar
    repeated Series          result = 4;
    ScanStats            scan_stats = 5;
}

message Series {
    repeated Label   metric = 1;
    repeated Sample samples = 2;
    optional Sample  sample = 3;
    optional double  scalar = 4;
    optional string stringliteral = 5;
}

message Label {
    string  name = 1;
    string value = 2;
}

message Sample {
    int64   time = 1;
    double value = 2;
}

message MetricsWalFileRequest {
    string      org_id = 1;
    string stream_name = 2;
    int64   start_time = 3;
    int64     end_time = 4;
    repeated MetricsWalFileFilter filters = 5;
}

message MetricsWalFileFilter {
    string          field = 1;
    repeated string value = 2; 
}

message MetricsWalFileResponse {
    repeated MetricsWalFile files = 1;
}

message MetricsWalFile {
    string       name = 1;
    string schema_key = 2;
    bytes        body = 3;
    int64        size = 4;
}
